# modular-c-all-material

./: README.md
ESP32/01 - Blinky with HAL gpio/main/: CMakeLists.txt  main.c
ESP32/01 - Blinky with HAL gpio/templates/simple/inc/: template.h
ESP32/02 - ADS1115 Device example/main/: blink_example_main.c
ESP32/03 - ADS1115 and LED PWM/main/: CMakeLists.txt  main.c
ESP32/03 - ADS1115 and LED PWM/templates/simple/src/: template.c
ESP32/04 - Analog interface/: .gitignore  .gitmodules  README.md
ESP32/04 - Analog interface/main/: main.c
ESP32/04 - Analog interface/templates/task/inc/: template.h
ESP32/05 - App template/app/callbacks/inc/: callbacks.h
ESP32/05 - App template/app/callbacks/src/: callbacks.c
ESP32/05 - App template/app/globals/inc/: globals.h
ESP32/05 - App template/app/globals/src/: globals.c
ESP32/05 - App template/app/initialise/inc/: app_config.h  initialise.h
ESP32/05 - App template/app/initialise/src/: initialise.c
ESP32/05 - App template/app/task/inc/: app.h
ESP32/05 - App template/app/task/src/: app.c
ESP32/05 - App template/main/: CMakeLists.txt  main.c
ESP32/05 - App template/templates/task/src/: template.c
STM32/Blinky/: .cproject  .gitignore  .mxproject  Blinky.ioc  Blinky.launch  CMakeLists.txt
STM32/Blinky/Core/Src/: main.c
STM32/Blinky/Debug/: Blinky.elf  Blinky.list  Blinky.map  makefile  objects.list
STM32/Blinky/Debug/Core/Src/: main.cyclo  main.su
STM32/Blinky/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
STM32/Blinky/cmake/stm32cubemx/: CMakeLists.txt
